--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 
   <script>
     /* ===== Endpoints (n8n) ===== */
-    const ENDPOINT_DATA = "https://luisyg.app.n8n.cloud/webhook-test/datos";          // CRUD Sheets
-    const ENDPOINT_CATALOGS = "https://luisyg.app.n8n.cloud/webhook-test/obtener-datos"; // Catálogos (GET)
+    const ENDPOINT_DATA = "https://luisyg.app.n8n.cloud/webhook/datos";          // CRUD Sheets
+    const ENDPOINT_CATALOGS = "https://luisyg.app.n8n.cloud/webhook/obtener-datos"; // Catálogos (GET)
 
     /* ===== Utils ===== */
     const $ = (sel, el=document) => el.querySelector(sel);
